[package]
name = "lard"
version = "0.1.0"
authors = ["gapuchi <arjun.adhia@adhia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }